# IronCore

./: .dockerignore  .gitattributes  .gitignore  API_DOCUMENTATION.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DEPLOYMENT.md  Dockerfile  Dockerfile.fly  LICENSE  PROJECT_OVERVIEW.md  PUSH_INSTRUCTIONS.md  QUICK_START.md  README.md  SECURITY.md  build.rs  codecov.yml  config.toml  deny.toml  deploy-to-fly.sh  docker-compose.yml  env.example.txt  env.testnet.example  fly.toml  rustfmt.toml  后端代码逻辑完整分析报告.md  后端升级兼容方案_生态系统版.md  开发技术文档_中文版.md  项目框架文档_中文版.md
.github/: PULL_REQUEST_TEMPLATE.md  copilot-instructions.md  dependabot.yml  event_test.json
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/scripts/: check-log-leaks.sh  ci_autofix.sh  create_autofix_resources.sh  run_full_autofix_flow.sh  scan_repo_for_secrets.sh  security-lint.sh
benches/: README.md  crypto_performance.rs
docs/: API_BEST_PRACTICES.md  ARCHITECTURE.md  CUSTODIAL_WALLET_API.md  DEMO.md  DEPLOYMENT_GUIDE.md  MULTI_CHAIN_UPGRADE.md  OPERATIONS_GUIDE.md  SECURITY_AUDIT.md  TESTING.md  env_vars.md
docs/screenshots/: README.md
examples/: bitcoin_ai_demo.rs  bitcoin_taproot_demo.rs  bitcoin_transfer.rs  bitcoin_utxo_selection.rs  ledger_bitcoin.rs  ledger_ethereum.rs  simple_demo.rs  trezor_bitcoin.rs  trezor_ethereum.rs
migrations/: 004_create_user_preferences.sql  005_add_wallet_address.sql  006_add_unique_constraint.sql
migrations/users/: 001_create_users_table.sql
monitoring/: alerts.yml  prometheus-alerts.yml  prometheus.yml
nginx/: wallet.conf
patches/coins-core-0.2.2-patched/: .cargo_vcs_info.json  Cargo.toml
patches/elliptic-curve-tools/: .cargo_vcs_info.json  CHANGELOG.md  Cargo.toml  README.md
patches/elliptic-curve-tools/src/: lib.rs  p256_serde_tests.rs  serdes.rs  sop.rs
patches/elliptic-curve-tools/tests/: serdes_roundtrip.rs
scripts/: backup.sh  check-server-status.sh  check_no_prints.sh  cleanup-port-start-server.sh  complete-repo-check.sh  final-cleanup.sh  final_sync_check.sh  generate_secrets.sh  health_check.sh  secure_start.sh  setup_https.sh  verify-server-status.sh  verify_api_alignment.sh
src/: cli.rs  key_management.rs  key_management_encrypted.rs  lib.rs  main.rs  mod.rs  mvp.rs  shamir.rs  storage_mock.rs  test_env.rs  utils.rs
src/adapter/: adapter.rs  mod.rs
src/anomaly_detection/: config.rs  detector.rs  errors.rs  events.rs  features.rs  mod.rs  model.rs  plugins.rs  rules.rs  storage.rs
src/api/: anomaly_detection.rs  api_additional_tests.rs  api_bridge_env_compat.rs  api_bridge_stable_tests.rs  api_server_tests.rs  api_stress_tests.rs  auth.rs  auth_simple.rs  bridge.rs  bridge_api_env_tests.rs  bridge_enhanced.rs  bridge_lifi.rs  cookie_config.rs  csp_middleware.rs  docs.rs  mod.rs  rate_limiting.rs  relay.rs  server.rs  server_config.rs  session_store.rs  transactions.rs  transfer.rs  types.rs  user_db.rs  user_preferences.rs  validators.rs  wallets.rs
src/application/: config.toml  mod.rs  service.rs
src/audit/: alert.rs  audit_confirmation_tests.rs  audit_rollback_tests.rs  backup.rs  confirmation.rs  logging.rs  mod.rs  network_rate_limit_tests.rs  operation_log.rs  ops_backup_tests.rs  ops_health_tests.rs  rate_limit.rs  rollback.rs
src/auth/: config.rs  errors.rs  lockout.rs  mod.rs  service.rs  session_manager.rs  types.rs
src/blockchain/: Backup-ToVm.ps1  audit.rs  backup_to_vm.sh  blockchain_ethereum_tests.rs  bridge_backup.rs  client.rs  ethereum.rs  etherscan.rs  mod.rs  traits.rs
src/config/: config.rs  di_container.rs  env_config.rs  mod.rs  service.rs
src/core/: abi.rs  adapter.rs  application.rs  bip32_parity_tests.rs  bip44.rs  bridge_test.rs  client.rs  config.rs  domain.rs  errors.rs  infrastructure.rs  interface.rs  key_management.rs  key_manager.rs  memory_protection.rs  mod.rs  result_ext.rs  validation.rs  wallet_info.rs  wallet_manager_bip44_tests.rs
src/crypto/: en.ftl  encryption_consistency.rs  hsm.rs  kdf.rs  mod.rs  quantum.rs  secure_derivation.rs  shamir.rs  signature_utils.rs
src/hardware/: mod.rs
src/i18n/: localization.rs  mod.rs
src/infrastructure/: infrastructure.rs  mod.rs
src/interface/: interface.rs  mod.rs
src/monitoring/: business_metrics.rs  mod.rs
src/network/: mod.rs  node_manager.rs  rate_limit.rs
src/ops/: backup.rs  health.rs  metrics.rs  mod.rs  ops_backup_tests.rs  ops_metrics_tests.rs
src/plugin/: event_bus.rs  middleware.rs  mod.rs  plugin.rs  plugin_manager.rs
src/security/: access_control.rs  anti_debug.rs  compliance.rs  encrypted_storage.rs  encryption.rs  env_validator.rs  error_sanitizer.rs  memory_protection.rs  mnemonic_export.rs  mod.rs  password_validator.rs  redaction.rs  secret.rs  shamir.rs
src/service/: di_container.rs  mod.rs  service.rs  wallet.rs
src/storage/: key_rotation.rs  mod.rs
src/tools/: async_support.rs  generator.rs  mod.rs  serdes.rs  sum_of_products.rs
systemd/: blockchain-wallet.service
tests/: anomaly_detection_modularity_tests.rs  api_handlers_backup_tests.rs  api_handlers_branch_coverage.rs  api_handlers_tests.rs  api_handlers_transaction_comprehensive.rs  api_handlers_transaction_tests.rs  api_handlers_wallet_comprehensive.rs  api_handlers_wallet_tests.rs  api_server_comprehensive.rs  api_server_enhanced_tests.rs  api_server_integration.rs  api_server_tests.rs  api_server_unit_tests.rs  api_tests.rs  application_tests.rs  audit_alert_tests.rs  audit_confirmation_tests.rs  audit_redaction.rs  audit_rollback_tests.rs  audit_tests.rs  balance_query.rs  basic_test.rs  bin_integration_tests.rs  bitcoin_client_comprehensive_tests.rs  bitcoin_deep_edge_tests.rs  bitcoin_integration_tests.rs  blockchain_ethereum_address_tests.rs  blockchain_ethereum_balance_fee_tests.rs  blockchain_ethereum_transaction_tests.rs  bridge.rs  bridge_comprehensive_tests.rs  bridge_integration.rs  bridge_persistence_strict.rs  bridge_roundtrip_persistence.rs  bridge_tests.rs  cli_create.rs  cli_integration.rs  cli_mnemonic_export_integration.rs  cli_smoke.rs  cli_tests.rs  (+99 more)
tests/archived/: .gitkeep
tests/paygate/: README.md  (+9 more)
(+107 files in other folders)
